# yeti-www

./: .gitignore  Cargo.toml  README.md  config.yaml  yeti-config.yaml
.github/workflows/: deploy.yml
resources/: blog_image.rs  blog_post.rs  blog_sync.rs
schemas/: schema.graphql
source/: biome.json  index.html  package-lock.json  package.json  vite-plugin-seo.ts  vite.config.ts
source/public/: install.ps1  install.sh  robots.txt  sitemap.xml
source/src/: App.tsx  auth.css  index.css  legal.css  main.tsx  routeTree.gen.ts  router.tsx  vite-env.d.ts  yeti.css
source/src/components/: BenchmarkChart.tsx  BetaModal.tsx  CodeBlock.tsx  Footer.tsx  Icon.tsx  Nav.tsx
source/src/data/: benchmarks.json  bestresults.json  posts.ts
source/src/pages/: AgenticHarness.tsx  Applications.tsx  Benchmarks.tsx  Blog.tsx  BlogPost.tsx  Company.tsx  Demos.tsx  Home.tsx  Hosting.tsx  LLMOptimization.tsx  Legal.tsx  MediaSecurity.tsx  NotFound.tsx  Platform.tsx  PlatformApplications.tsx  PlatformDatabases.tsx  PlatformFabric.tsx  PlatformInterfaces.tsx  PlatformPlugins.tsx  Pricing.tsx  UseCases.tsx
source/src/pages/blog/: Blog.tsx  BlogPost.tsx
source/src/pages/developers/: Benchmarks.tsx  GettingStarted.tsx
source/src/pages/legal/: AcceptableUse.tsx  CookiePolicy.tsx  Legal.tsx  PrivacyPolicy.tsx  SoftwareLicense.tsx  SupportPolicy.tsx  TermsOfService.tsx
source/src/pages/platform/: Applications.tsx  Databases.tsx  Fabric.tsx  Interfaces.tsx  (+1 more)
source/src/routes/: __root.tsx  blog.tsx  pricing.tsx
source/src/styles/: _vars.css  index.css  yeti.css
src/: lib.rs
(+17 files in other folders)
