[package]
name = "www"
edition = "2024"
description = "Website"
version = "1.0.0"

[package.metadata.app]
customer_id = "yeti"
schemas = "schemas/schema.graphql"
resources = "resources/*.rs"
static = { path = "web", root = "/", source = "source", spa = true, build = "npm install && npm run build" }

[dependencies]
