[package]
name = "www"
edition = "2024"
description = "Website"
version = "1.0.0"

[package.metadata.app]
customer_id = "yeti"
schemas = "schemas/schema.graphql"
resources = "resources/*.rs"
static = { path = "web", root = "/", source = "source", spa = true, build = "npm install && npm run build" }

[dependencies]
tracing = "0.1"
# In-memory tarball extraction for blog_sync (fetch GitHub's
# /repos/.../tarball/{ref} archive in one HTTP call rather than
# enumerating posts via the per-file API).
tar = "0.4"
flate2 = "1.1"
